# causal-bench

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_mvp.py  test_script.py
.github/workflows/: ci.yml
docs/benchmark/: evaluators.rst  index.rst  report.rst  runner.rst  simulators.rst
notebooks/: 01_causal_discovery_comparison.ipynb  02_ci_test_power_analysis.ipynb  03_effect_estimation_census.ipynb
pgmpy/benchmark/: __init__.py  report.py  runner.py
pgmpy/benchmark/evaluators/: __init__.py  base.py  causal_discovery.py  ci_test.py  effect_estimation.py  registry.py
pgmpy/benchmark/simulators/: __init__.py  base.py  parametric_sweep.py  random_dag.py  real_dataset.py
src/causal_bench/: __init__.py  report.py  runner.py  types.py
src/causal_bench.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/causal_bench/evaluators/: __init__.py
src/causal_bench/simulators/: __init__.py  base.py  random_dag.py
src/pgmpy/benchmark/: __init__.py  report.py  runner.py
src/pgmpy/benchmark/evaluators/: __init__.py  base.py  causal_discovery.py
src/pgmpy/benchmark/simulators/: base.py  random_dag.py
tests/: test_simulators.py
tests/benchmark/: conftest.py  test_evaluators.py  test_phase1_scaffold.py  test_report.py  test_runner.py  test_simulators.py
