[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "causal-bench"
version = "0.1.0"
description = "A composable benchmarking framework for causal discovery algorithms and CI tests in pgmpy."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "GSoC Contributor", email = "contributor@example.com" }]
keywords = ["causal inference", "benchmarking", "pgmpy", "DAG", "causal discovery"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ["pandas>=2.0", "numpy>=1.24", "pgmpy>=0.1.25", "networkx>=3.0"]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-cov>=4.1", "ruff>=0.4", "mypy>=1.8", "pandas-stubs>=2.0"]

[project.urls]
Repository = "https://github.com/Dijo-404/causal-bench"
Issues = "https://github.com/Dijo-404/causal-bench/issues"

[tool.setuptools.packages.find]
include = ["pgmpy*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -v"
markers = [
    "unit: fast unit tests",
    "integration: integration tests with real pgmpy components",
    "slow: longer running benchmark tests",
]
